@@ -58,7 +58,7 @@ public class GeneratorModule extends FaradayModule {
     private static final double PICKUP_COIL_LOOP_AREA = FaradayConstants.DEFAULT_PICKUP_LOOP_AREA;
     private static final double PICKUP_COIL_DIRECTION = 0.0; // radians
     private static final double PICKUP_COIL_DISTANCE_EXPONENT = 2.0;
-    private static final double PICKUP_COIL_FUDGE_FACTOR = 1.0;  // see PickupCoil.setFudgeFactor, 1 because magnet is never inside coil
+    private static final double PICKUP_COIL_TRANSITION_SMOOTHING_SCALE = 1.0;  // see PickupCoil.setTransitionSmoothingScale, 1 because magnet is never inside coil
     private static final double LIGHTBULB_GLASS_MIN_ALPHA = 0.35;
     
     // Scaling -- values depend on the distance between pickup coil and turbine!
@@ -130,7 +130,7 @@ public class GeneratorModule extends FaradayModule {
         _pickupCoilModel.setLoopArea( PICKUP_COIL_LOOP_AREA );
         _pickupCoilModel.setDirection( PICKUP_COIL_DIRECTION );
         _pickupCoilModel.setLocation( PICKUP_COIL_LOCATION);
-        _pickupCoilModel.setFudgeFactor( PICKUP_COIL_FUDGE_FACTOR );
+        _pickupCoilModel.setTransitionSmoothingScale( PICKUP_COIL_TRANSITION_SMOOTHING_SCALE );
         model.addModelElement( _pickupCoilModel );
        
         // Lightbulb
